--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,37 @@
+:root {
+    --color-bg-search-bar: #e5e5e5;
+    --color-bg-body: #f8f9fa;
+    --color-side-bar: #0f263d;
+    --color-nav-bar: #1b72e8;
+}
+
 body{
     font-family: 'Roboto', sans-serif;
+}
+
+.wrapper{
+    width: 100%;
+    height: 100vh;
+}
+
+header{
+    width: 100%;
+    height: 70px;
+}
+
+main{
+    width: 100%;
+    height: calc(100% - 70px);
+    display: flex;
+}
+
+.side-bar{
+    width: 150px;
+    height: 100%;
+    background-image: url("../img/sidebar-bg.png");
+    background-color:  #0f263d;
+}
+
+.main-content{
+    width: calc(100% - 150px);
 }
