--- a/css/style.css
+++ b/css/style.css
@@ -54,3 +54,10 @@ main{
     padding-bottom: 20px;
     padding-left: 20px;
 }
+
+/* Contenuto Principale */
+
+.image{
+    width: 20px;
+    height: 20px;
+}
