--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ main{
 }
 
 .menu{
-    color: white;
+    color:white;
     padding-top: 20px;
     padding-left: 20px;
 }
@@ -85,6 +85,10 @@ ul, li{
     color: white;
     padding-left: 10px;
     padding-right: 10px;
+}
+
+.circle{
+    display: none;
 }
 
 /* Media Query */
@@ -123,6 +127,19 @@ ul, li{
     }
 
     .table-2{
+        display: none;
+    }
+
+    .circle{
+        display: block;
+        border-radius: 50%;
+        font-size: 10px;
+        height: 30px;
+        width: 30px;
+        line-height: 30px;
+    }
+
+    .bool{
         display: none;
     }
 }
